Fixed date/header alignment issue

--- a/assets/screen.css
+++ b/assets/screen.css
@@ -9,7 +9,7 @@ body {
 
 h1,h2,h3,h4 {
    font-family: Helvetica, Verdana, Arial, sans-serif;
-   margin: 2em 0 1em 0;
+   margin: 24px 0 12px 0;
    font-weight: bold;
    -webkit-font-smoothing: antialiased;
    text-rendering: optimizelegibility;
@@ -34,6 +34,11 @@ h1 > a, h2 > a, h3 > a, h4 > a, h5 > a, h6 > a, h1 > a:hover, h2 > a:hover, h3 >
    font-style: italic;
    color: #204a87;
    font: lighter 50px Cambria, Georgia, Times, serif;
+   text-decoration: none;
+}
+
+#date {
+  margin-top: 24px;
 }
 
 #menu {
